--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,7 @@
   </head>
   <body>
 
-    <img src="/resources/mix.png" alt="Imagen">
-    <em class="fas fa-bars"></em>
-    <div id="root"></div>
+    <div id="root" style="background-color: lightblue; display: flex; align-items: center; justify-content: center"></div>
     
   </body>
 </html>
