Moving forward with Cart.js component. Some adjustments into NavBar.js component.

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,12 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css" integrity="sha512-OdEXQYCOldjqUEsuMKsZRj93Ht23QRlhIb8E/X0sbwZhme8eUw6g8q7AdxGJKakcBbv7+/PX0Gc2btf7Ru8cZA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <title>React App</title>
   </head>
   <body>
 
-    <div id="root" style="background-color: lightblue; display: flex; align-items: center; justify-content: center"></div>
+    <div id="root"></div>
     
   </body>
 </html>
