General code refactoring and optimization of components' functions

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,18 @@
   <body>
 
     <div id="root"></div>
+
+    <div class="sorryMessage">
+      <h3 class="message__h3">Sorry!</h3>
+      <p class="message__p">This website is not able for mobile devices.</p>
+      <p class="message__p">Try opening it in your pc or laptop for better functionality.</p>
+      <br>
+      <hr size="4" width="70%" color="black">
+      <br>
+      <h3 class="message__h3">Perdon!</h3>
+      <p class="message__p">Este sitio web no esta adaptado para dispositivos mobiles.</p>
+      <p class="message__p">Intenta abriendolo en tu propia computadora o laptop.</p>
+    </div>
     
   </body>
 </html>
